UI messenger conversation

--- a/src/app/modules/pages/messenger/messenger.component.html
+++ b/src/app/modules/pages/messenger/messenger.component.html
@@ -1,7 +1,7 @@
 <ng-container>
-    <div class="flex">
+    <div class="flex h-screen">
         <app-friend-list style="flex: 1;"></app-friend-list>
-        <app-conversation style="flex: 1;"></app-conversation>
+        <app-conversation style="flex: 3;"></app-conversation>
         <app-conversation-setting style="flex: 1;"></app-conversation-setting>
     </div>
 </ng-container>
