--- a/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
+++ b/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
@@ -1,1 +1,37 @@
-<p>friend-list works!</p>
+<div class="friend-list-container m-4 rounded-md">
+    <div class="flex flex-col">
+        <div class="m-3">
+            <h2>All Chats</h2>
+            <h1>Messages (29)</h1>
+            <mat-form-field class="mt-8">
+                <input matInput type="text" placeholder="Search">
+                <button matSuffix mat-icon-button>
+                    <mat-icon>search</mat-icon>
+                </button>
+            </mat-form-field>
+        </div>
+
+        <div class="m-3">
+            <h2>All Messages</h2>
+            <div class="friend-messages flex flex-col mt-3 overflow-y-scroll">
+                <div class="friend-message flex items-center justify-between" *ngFor="let message of messages, first as first">
+                    <div class="message-info flex items-center mt-5">
+                        <div class="user-avatar">
+                            <img src="../../../../../../assets/san-marco.jpg" alt="user-avatar" class="avatar">
+                        </div>
+                        <div class="user-info flex flex-col ml-3">
+                            <span>Leslie Alexander</span>
+                            <span>What's up bro!</span>
+                        </div>
+                    </div>
+                    <div class="message-time flex flex-col items-center justify-center">
+                        <span class="mb-2">14:15</span>
+                        <div class="message-badge rounded-full flex items-center justify-center">
+                            13
+                        </div>
+                    </div>     
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
