--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,9 +46,18 @@ body {
   color: #e4e6eb;
 }
 
+.avatar {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 @import "./app/common/styles/button.scss";
 @import "./app/common/styles/text.scss";
 @import "./app/common/styles/loading.scss";
+@import "./app/common/styles/icon.scss";
+
 :root {
   --color-primary: #25b09b;
   --color-secondary: blue;
