--- a/src/app/modules/pages/pages.component.html
+++ b/src/app/modules/pages/pages.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<app-layout
+  [ngClass]="{
+    'aside-minimize': !(isAsideActive$ | async),
+    'aside-minimize-hover': !(isAsideHover$ | async),
+  }"
+>
+  <router-outlet></router-outlet>
+</app-layout>
