--- a/src/app/common/styles/button.scss
+++ b/src/app/common/styles/button.scss
@@ -1,11 +1,21 @@
 .btn {
-    border-radius: 20px;
-    padding: 6px 20px;
+    border-radius: 23px;
+    padding: 4px 30px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-wrap: nowrap;
 }
 
 .btn-primary {
     background-color: var(--color-primary);
+    border: none;
+    letter-spacing: 0px;
+}
+
+.btn-primary:hover {
+
 }
 
 .btn-secondary {
