--- a/src/app/common/styles/variables.scss
+++ b/src/app/common/styles/variables.scss
@@ -5,3 +5,6 @@
 $color-primary: var(--primary-color);
 $color-secondary: var(--secondary-color);
 $color-danger: var(--danger-color);
+$color-background: var(--background-color);
+$color-text: var(--text-color);
+$color-card: var(--card-color);
