--- a/src/app/modules/pages/messenger/components/friend-list/friend-list.component.scss
+++ b/src/app/modules/pages/messenger/components/friend-list/friend-list.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../../common/styles/variables.scss";
+
 :host {
     .friend-list-container {
         background-color: rgb(85 76 76 / 40%);
@@ -9,7 +11,7 @@
     }
 
     .message-badge {
-        background-color: var(--color-primary);  
+        background-color: $color-primary;  
         width: 22px;
         height: 22px;      
     }
