--- a/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
+++ b/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
@@ -1,4 +1,4 @@
-<div class="friend-list-container m-4 rounded-md">
+<div class="friend-list-container card">
     <div class="flex flex-col">
         <div class="m-3">
             <h2>All Chats</h2>
