--- a/src/app/modules/pages/messenger/messenger.component.html
+++ b/src/app/modules/pages/messenger/messenger.component.html
@@ -1,4 +1,4 @@
-<ng-container>
+<ng-container style="flex: 1;">
     <div class="flex h-screen">
         <app-friend-list style="flex: 1;"></app-friend-list>
         <app-conversation style="flex: 3;"></app-conversation>
