--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,5 +1,7 @@
 <div class="flex flex-row">
   <app-aside></app-aside>
-  <ng-content></ng-content>
+  <div class="grow">
+    <ng-content></ng-content>
+  </div>
 </div>
 <app-footer></app-footer>
