--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,8 @@ $Chat-theme: mat.define-light-theme((
 @import "./app/common/styles/loading.scss";
 @import "./app/common/styles/icon.scss";
 @import "./app/common/styles/variables.scss";
+@import "./app/common/styles/input.scss";
+
 
 html, body { 
   height: 100%; 
@@ -64,6 +66,13 @@ body {
 .avatar {
   width: 50px;
   height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.avatar-medium {
+  width: 35px;
+  height: 35px;
   object-fit: cover;
   border-radius: 50%;
 }
