--- a/src/app/modules/layout/components/aside/aside.component.html
+++ b/src/app/modules/layout/components/aside/aside.component.html
@@ -10,7 +10,7 @@
     </mat-tab>
   </mat-tab-group>
   <div *ngIf="activeTab === 'Chat'">
-    <app-messenger></app-messenger>
+
   </div>
-  <button class="logout-button py-2 px-4 text-sm font-medium text-white bg-red-500 rounded-md shadow focus:outline-none focus:ring-2 focus:ring-red-500 hover:bg-red-600 mt-4">Logout</button>
+  <button class="btn btn-primary">Logout</button>
 </aside>
