--- a/src/app/common/styles/variables.scss
+++ b/src/app/common/styles/variables.scss
@@ -3,6 +3,7 @@
 }
 
 $color-primary: var(--primary-color);
+$color-hover-primary: var(--primary-hover-color);
 $color-secondary: var(--secondary-color);
 $color-danger: var(--danger-color);
 $color-background: var(--background-color);
