--- a/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
+++ b/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
@@ -13,7 +13,7 @@
 
         <div class="m-3">
             <h2>All Messages</h2>
-            <div class="friend-messages flex flex-col mt-3 overflow-y-scroll">
+            <div class="friend-messages flex flex-col mt-3 pr-1 overflow-y-scroll">
                 <div class="friend-message flex items-center justify-between" *ngFor="let message of messages, first as first">
                     <div class="message-info flex items-center mt-5">
                         <div class="user-avatar">
