--- a/src/app/modules/pages/messenger/components/friend-list/friend-list.component.scss
+++ b/src/app/modules/pages/messenger/components/friend-list/friend-list.component.scss
@@ -15,4 +15,10 @@
         width: 22px;
         height: 22px;      
     }
+
+    ::ng-deep {
+        .mat-mdc-form-field-subscript-wrapper {
+            display: none !important;
+        }
+    }
 }
