update common form

--- a/src/app/modules/pages/messenger/components/message/message.component.scss
+++ b/src/app/modules/pages/messenger/components/message/message.component.scss
@@ -58,7 +58,7 @@
         bottom: -15px;
         right: -2px;
         padding: 3px;
-        background-color: black;
+        background-color: gray;
     }
 }
 
