--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -14,14 +14,22 @@
 
       <h3 class="text-lg font-bold mb-4">Sign up now and unlock exclusive access!</h3>
 
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <form *ngIf="form" [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="mb-4">
-          <label for="username" class="block text-gray-700">Username:</label>
-          <input id="username" formControlName="username" class="mt-1 p-2 w-full border rounded" />
+          <mat-form-field appearance="outline">
+            <input matInput formControlName="username" placeholder="Username" class="mt-1 p-2 w-full border rounded" trimWhiteSpace/>
+            <mat-error *ngIf="controlHasError('required', 'username')">
+              Please enter username
+            </mat-error>
+          </mat-form-field>
         </div>
         <div class="mb-4">
-          <label for="password" class="block text-gray-700">Password:</label>
-          <input id="password" type="password" formControlName="password" class="mt-1 p-2 w-full border rounded" />
+          <mat-form-field appearance="outline">
+            <input matInput type="password" formControlName="password" placeholder="Password" class="mt-1 p-2 w-full border rounded" trimWhiteSpace/>
+            <mat-error *ngIf="controlHasError('required', 'password')">
+              Please enter password
+            </mat-error>
+          </mat-form-field>
         </div>
         <button type="submit" class="w-full bg-blue-500 text-white p-2 rounded">Login</button>
       </form>
