add conv seen and timeline

--- a/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
+++ b/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
@@ -19,13 +19,13 @@
                         <app-user-avatar></app-user-avatar>
                         <div class="user-info flex flex-col ml-3">
                             <span>Leslie Alexander</span>
-                            <span>What's up bro!</span>
+                            <span>What's up bro! · 2h</span>
                         </div>
                     </div>
                     <div class="message-time flex flex-col items-center justify-center">
                         <span class="mb-2">14:15</span>
                         <div class="message-badge rounded-full flex items-center justify-center">
-                            13
+                            1
                         </div>
                     </div>     
                 </div>
