--- a/src/app/modules/pages/messenger/components/message/message.component.html
+++ b/src/app/modules/pages/messenger/components/message/message.component.html
@@ -1,207 +1,222 @@
-<div class="message flex" [class.own]="message.own">
-    <!-- avatar -->
-    <div   
-        *ngIf="!message.own && isLastMessage()" 
-        class="avatar-container flex items-end justify-center mr-2"
-        [class.mb-3]="message.reactionCount > 0"
-    >
-        <app-user-avatar [avatar]="message.user.avatar"></app-user-avatar>
+<div class="message" [class.own]="message.own">
+    <!-- timeline text -->
+    <div class="message-timeline flex items-center justify-center w-full" *ngIf="displayTimeline">
+        <span>{{ message.sentAt }}</span>
     </div>
-    <!-- text only message -->
-    <div 
-        class="message-text-container flex w-full" 
-        *ngIf="!message.image && !message.attachment"
-        [class.items-end]="message.own"
-        [class.justify-end]="message.own"
-        [class.flex-col]="message.repliedTo"
-        [class.mb-3]="message.reactionCount > 0"
-        [ngClass]="message.repliedTo ? 'mt-3' : 'mt-0.5'"
-        (mouseenter)="toggleMessageOptions(false)"
-        (mouseleave)="toggleMessageOptions(true)"
-        >    
-        <span 
-            *ngIf="!message.own && message.repliedTo?.content"
-            [class.not-last-message]="!message.own && !isLastMessage()" 
+    <div class="message-content flex w-full">
+        <!-- avatar -->
+        <div   
+            *ngIf="!message.own && isLastMessage()" 
+            class="avatar-container flex items-end justify-center mr-2"
+            [class.mb-3]="message.reactionCount > 0"
         >
-            Leslie Alexander replied to you
-        </span>
-        <span 
-            *ngIf="message.own && message.repliedTo?.content"
-            [class.not-last-message]="!message.own && !isLastMessage()" 
-        >
-            You replied to Leslie Alexander
-        </span>
-        <div 
-            *ngIf="message.repliedTo?.content"
-            [class.not-last-message]="!message.own && !isLastMessage()" 
-            class="replied-to long-text">
-            <span>
-                {{ message.repliedTo?.content }}
-            </span>
+            <app-user-avatar [avatar]="message.user.avatar"></app-user-avatar>
         </div>
-        <div class="message-content flex items-center" [class.flex-row-reverse]="message.own">
-            <div 
-                class="message-text long-text relative"
-                [class.not-last-message]="!message.own && !isLastMessage()"
-                [class.first-message]="messageOrder == 'first'"
-                [class.middle-message]="messageOrder == 'middle'"
-                [class.last-message]="messageOrder == 'last'"
-                [class.single-message]="messageOrder == 'single'"
-                [matTooltip]="message.sentAt"
-                [matTooltipPosition]="message.own ? 'left' : 'right'"
+        <!-- text only message -->
+        <div 
+            class="message-text-container flex w-full" 
+            *ngIf="!message.image && !message.attachment"
+            [class.items-end]="message.own"
+            [class.justify-end]="message.own"
+            [class.flex-col]="message.repliedTo"
+            [class.mb-3]="message.reactionCount > 0"
+            [ngClass]="message.repliedTo ? 'mt-3' : 'mt-0.5'"
+            (mouseenter)="toggleMessageOptions(false)"
+            (mouseleave)="toggleMessageOptions(true)"
+            >    
+            <span 
+                *ngIf="!message.own && message.repliedTo?.content"
+                [class.not-last-message]="!message.own && !isLastMessage()" 
             >
-                <span *ngIf="message.content">
-                    {{ message.content }}
+                Leslie Alexander replied to you
+            </span>
+            <span 
+                *ngIf="message.own && message.repliedTo?.content"
+                [class.not-last-message]="!message.own && !isLastMessage()" 
+            >
+                You replied to Leslie Alexander
+            </span>
+            <div 
+                *ngIf="message.repliedTo?.content"
+                [class.not-last-message]="!message.own && !isLastMessage()" 
+                class="replied-to long-text">
+                <span>
+                    {{ message.repliedTo?.content }}
                 </span>
+            </div>
+            <div class="message-content flex items-center" [class.flex-row-reverse]="message.own">
                 <div 
-                    class="message-reactions absolute rounded-full flex items-center" 
-                    *ngIf="message.reactionCount > 0"
-                    [matTooltip]="uniqueReactionUsernames()"
-                    matTooltipPosition="below"
-                    matTooltipClass="tooltip"
+                    class="message-text long-text relative"
+                    [class.not-last-message]="!message.own && !isLastMessage()"
+                    [class.first-message]="messageOrder == 'first'"
+                    [class.middle-message]="messageOrder == 'middle'"
+                    [class.last-message]="messageOrder == 'last'"
+                    [class.single-message]="messageOrder == 'single'"
+                    [matTooltip]="message.sentAt"
+                    [matTooltipPosition]="message.own ? 'left' : 'right'"
                 >
-                    <span *ngFor="let reaction of uniqueReactions()">{{ getReactionIcon(reaction.type) }}</span>
-                    <span class="px-1" *ngIf="message.reactionCount > 1">{{ message.reactionCount }}</span>
+                    <span *ngIf="message.content">
+                        {{ message.content }}
+                    </span>
+                    <div 
+                        class="message-reactions absolute rounded-full flex items-center" 
+                        *ngIf="message.reactionCount > 0"
+                        [matTooltip]="uniqueReactionUsernames()"
+                        matTooltipPosition="below"
+                        matTooltipClass="tooltip"
+                    >
+                        <span *ngFor="let reaction of uniqueReactions()">{{ getReactionIcon(reaction.type) }}</span>
+                        <span class="px-1" *ngIf="message.reactionCount > 1">{{ message.reactionCount }}</span>
+                    </div>
+                </div>
+                        
+                <div class="message-options items-center ml-4" [ngClass]="isMessageOptionsHidden ? 'invisible' : 'flex'">
+                    <mat-icon class="mr-3">close</mat-icon>
+                        
+                    <mat-icon class="mr-3">close</mat-icon>
+                
+                    <mat-icon class="mr-3">close</mat-icon>
                 </div>
             </div>
-                    
-            <div class="message-options items-center ml-4" [ngClass]="isMessageOptionsHidden ? 'invisible' : 'flex'">
-                <mat-icon class="mr-3">close</mat-icon>
-                    
-                <mat-icon class="mr-3">close</mat-icon>
-            
-                <mat-icon class="mr-3">close</mat-icon>
-            </div>
         </div>
-    </div>
-    <!-- image message -->
-    <div 
-        class="message-image flex w-full" 
-        *ngIf="message.image" 
-        [class.flex-col]="message.repliedTo"
-        [ngClass]="message.repliedTo ? 'mt-3' : 'mt-0.5'"
-        [class.mb-3]="message.reactionCount > 0"
-        (mouseenter)="toggleMessageOptions(false)"
-        (mouseleave)="toggleMessageOptions(true)"
-    >
-        <span 
-            *ngIf="!message.own && message.repliedTo?.content"
-            [class.not-last-message]="!message.own && !isLastMessage()"
-        >
-            Leslie Alexander replied to you
-        </span>
-        <span 
-            *ngIf="message.own && message.repliedTo?.content"
-            [class.not-last-message]="!message.own && !isLastMessage()"
-        >
-            You replied to Leslie Alexander
-        </span>
+        <!-- image message -->
         <div 
-            *ngIf="message.repliedTo?.content" 
-            class="replied-to long-text"
-            [class.not-last-message]="!message.own && !isLastMessage()"
+            class="message-image flex w-full" 
+            *ngIf="message.image" 
+            [class.flex-col]="message.repliedTo"
+            [ngClass]="message.repliedTo ? 'mt-3' : 'mt-0.5'"
+            [class.mb-3]="message.reactionCount > 0"
+            (mouseenter)="toggleMessageOptions(false)"
+            (mouseleave)="toggleMessageOptions(true)"
         >
-            <span>
-                {{ message.repliedTo.content }}
-            </span>
-        </div>
-        <div class="message-content flex items-center" [class.flex-row-reverse]="message.own">
-            <div class="relative" [style.z-index]="10">
-                <app-image
-                    [src]="message.image"
-                    [classes]="{
-                        'message-image': true,
-                        'with-text': !!message.content,
-                        'not-last-message': !message.own && !isLastMessage(),
-                        'first-message': messageOrder === 'first',
-                        'middle-message': messageOrder === 'middle',
-                        'last-message': messageOrder === 'last',
-                        'single-message': messageOrder === 'single'
-                      }"
-                    [width]="300"
-                    [height]="200"
-                />
-                <div class="message-reactions absolute rounded-full flex items-center" *ngIf="message.reactionCount > 0">
-                    <span *ngFor="let reaction of uniqueReactions()">{{ getReactionIcon(reaction.type) }}</span>
-                    <span class="px-1" *ngIf="message.reactionCount > 1">{{ message.reactionCount }}</span>
-                </div>
-            </div>
-            <div class="message-options items-center ml-4" [ngClass]="isMessageOptionsHidden ? 'invisible' : 'flex'">
-                <mat-icon class="mr-3">close</mat-icon>
-                    
-                <mat-icon class="mr-3">close</mat-icon>
-            
-                <mat-icon class="mr-3">close</mat-icon>
-            </div>
-        </div>
-    </div>
-
-    <!-- attachment message -->
-    <div 
-        class="message-attachment flex w-full"
-        *ngIf="message.attachment"
-        [class.items-end]="message.own"
-        [class.justify-end]="message.own"
-        [class.flex-col]="message.repliedTo"
-        [class.mb-3]="message.reactionCount > 0"
-        [ngClass]="message.repliedTo ? 'mt-3' : 'mt-0.5'"
-        (mouseenter)="toggleMessageOptions(false)"
-        (mouseleave)="toggleMessageOptions(true)"
-    >
-        <span 
-            *ngIf="!message.own && message.repliedTo?.content"
-            [class.not-last-message]="!message.own && !isLastMessage()" 
-        >
-            Leslie Alexander replied to you
-        </span>
-        <span 
-            *ngIf="message.own && message.repliedTo?.content"
-            [class.not-last-message]="!message.own && !isLastMessage()" 
-        >
-            You replied to Leslie Alexander
-        </span>
-        <div 
-            *ngIf="message.repliedTo?.content"
-            [class.not-last-message]="!message.own && !isLastMessage()" 
-            class="replied-to long-text">
-            <span>
-                {{ message.repliedTo?.content }}
-            </span>
-        </div>
-        <div class="message-content flex items-center" [class.flex-row-reverse]="message.own">
-            <div 
-                class="flex message-text relative"
-                [class.not-last-message]="!['last', 'single'].includes(messageOrder)"
-                [class.first-message]="messageOrder == 'first'"
-                [class.middle-message]="messageOrder == 'middle'"
-                [class.last-message]="messageOrder == 'last'"
-                [class.single-message]="messageOrder == 'single'"
-                [matTooltip]="message.sentAt"
-                [matTooltipPosition]="message.own ? 'left' : 'right'"
+            <span 
+                *ngIf="!message.own && message.repliedTo?.content"
+                [class.not-last-message]="!message.own && !isLastMessage()"
             >
-                <div class="attachment-icon flex items-center">
-                    <mat-icon class="mr-3">insert_drive_file</mat-icon>
-                </div>
-                <div class="attachment-content flex flex-col">
-                    <span>{{ message.attachment.name }}</span>
-                    <span>{{ message.attachment.size }}</span>
-                </div>
-                <div class="message-reactions absolute rounded-full flex items-center" *ngIf="message.reactionCount > 0">
-                    <span *ngFor="let reaction of uniqueReactions()">{{ getReactionIcon(reaction.type) }}</span>
-                    <span class="px-1" *ngIf="message.reactionCount > 1">{{ message.reactionCount }}</span>
-                </div>
+                Leslie Alexander replied to you
+            </span>
+            <span 
+                *ngIf="message.own && message.repliedTo?.content"
+                [class.not-last-message]="!message.own && !isLastMessage()"
+            >
+                You replied to Leslie Alexander
+            </span>
+            <div 
+                *ngIf="message.repliedTo?.content" 
+                class="replied-to long-text"
+                [class.not-last-message]="!message.own && !isLastMessage()"
+            >
+                <span>
+                    {{ message.repliedTo.content }}
+                </span>
             </div>
-                    
-            <div class="message-options items-center ml-4" [ngClass]="isMessageOptionsHidden ? 'invisible' : 'flex'">
-                <mat-icon class="mr-3">close</mat-icon>
-                    
-                <mat-icon class="mr-3">close</mat-icon>
-            
-                <mat-icon class="mr-3">close</mat-icon>
+            <div class="message-content flex items-center" [class.flex-row-reverse]="message.own">
+                <div class="relative" [style.z-index]="10">
+                    <app-image
+                        [src]="message.image"
+                        [classes]="{
+                            'message-image': true,
+                            'with-text': !!message.content,
+                            'not-last-message': !message.own && !isLastMessage(),
+                            'first-message': messageOrder === 'first',
+                            'middle-message': messageOrder === 'middle',
+                            'last-message': messageOrder === 'last',
+                            'single-message': messageOrder === 'single'
+                          }"
+                        [width]="300"
+                        [height]="200"
+                        [matTooltip]="message.sentAt"
+                        [matTooltipPosition]="message.own ? 'left' : 'right'"
+                    />
+                    <div class="message-reactions absolute rounded-full flex items-center" *ngIf="message.reactionCount > 0">
+                        <span *ngFor="let reaction of uniqueReactions()">{{ getReactionIcon(reaction.type) }}</span>
+                        <span class="px-1" *ngIf="message.reactionCount > 1">{{ message.reactionCount }}</span>
+                    </div>
+                </div>
+                <div class="message-options items-center ml-4" [ngClass]="isMessageOptionsHidden ? 'invisible' : 'flex'">
+                    <mat-icon class="mr-3">close</mat-icon>
+                        
+                    <mat-icon class="mr-3">close</mat-icon>
+                
+                    <mat-icon class="mr-3">close</mat-icon>
+                </div>
             </div>
         </div>
+    
+        <!-- attachment message -->
+        <div 
+            class="message-attachment flex w-full"
+            *ngIf="message.attachment"
+            [class.items-end]="message.own"
+            [class.justify-end]="message.own"
+            [class.flex-col]="message.repliedTo"
+            [class.mb-3]="message.reactionCount > 0"
+            [ngClass]="message.repliedTo ? 'mt-3' : 'mt-0.5'"
+            (mouseenter)="toggleMessageOptions(false)"
+            (mouseleave)="toggleMessageOptions(true)"
+        >
+            <span 
+                *ngIf="!message.own && message.repliedTo?.content"
+                [class.not-last-message]="!message.own && !isLastMessage()" 
+            >
+                Leslie Alexander replied to you
+            </span>
+            <span 
+                *ngIf="message.own && message.repliedTo?.content"
+                [class.not-last-message]="!message.own && !isLastMessage()" 
+            >
+                You replied to Leslie Alexander
+            </span>
+            <div 
+                *ngIf="message.repliedTo?.content"
+                [class.not-last-message]="!message.own && !isLastMessage()" 
+                class="replied-to long-text">
+                <span>
+                    {{ message.repliedTo?.content }}
+                </span>
+            </div>
+            <div class="message-content flex items-center" [class.flex-row-reverse]="message.own">
+                <div 
+                    class="flex message-text relative"
+                    [class.not-last-message]="!['last', 'single'].includes(messageOrder)"
+                    [class.first-message]="messageOrder == 'first'"
+                    [class.middle-message]="messageOrder == 'middle'"
+                    [class.last-message]="messageOrder == 'last'"
+                    [class.single-message]="messageOrder == 'single'"
+                    [matTooltip]="message.sentAt"
+                    [matTooltipPosition]="message.own ? 'left' : 'right'"
+                >
+                    <div class="attachment-icon flex items-center">
+                        <mat-icon class="mr-3">insert_drive_file</mat-icon>
+                    </div>
+                    <div class="attachment-content flex flex-col">
+                        <span>{{ message.attachment.name }}</span>
+                        <span>{{ message.attachment.size }}</span>
+                    </div>
+                    <div class="message-reactions absolute rounded-full flex items-center" *ngIf="message.reactionCount > 0">
+                        <span *ngFor="let reaction of uniqueReactions()">{{ getReactionIcon(reaction.type) }}</span>
+                        <span class="px-1" *ngIf="message.reactionCount > 1">{{ message.reactionCount }}</span>
+                    </div>
+                </div>
+                        
+                <div class="message-options items-center ml-4" [ngClass]="isMessageOptionsHidden ? 'invisible' : 'flex'">
+                    <mat-icon class="mr-3">close</mat-icon>
+                        
+                    <mat-icon class="mr-3">close</mat-icon>
+                
+                    <mat-icon class="mr-3">close</mat-icon>
+                </div>
+            </div>
+        </div>
+
     </div>
-    <!-- notify text -->
+    <!-- seen -->
+    <div class="my-2">
+        <div class="flex justify-end user-avatar-seen" *ngIf="displaySeen">
+            <img src="../../../../../../assets/avatar-1.png" alt="">
+            <img src="../../../../../../assets/avatar-2.png" alt="">
+        </div>
+    </div>
 </div>
 <!-- <div class="flex items-center justify-center mt-3">
     <span>29 Jun 2024, 14:38</span>
