--- a/src/app/modules/pages/messenger/components/message/message.component.scss
+++ b/src/app/modules/pages/messenger/components/message/message.component.scss
@@ -60,6 +60,13 @@
         padding: 3px;
         background-color: gray;
     }
+
+    .user-avatar-seen {
+        img {
+            width: 15px !important;
+            height: 15px !important;
+        }
+    }
 }
 
 .own {
