--- a/src/app/shared/components/user-avatar/components/user-avatar.component.scss
+++ b/src/app/shared/components/user-avatar/components/user-avatar.component.scss
@@ -7,7 +7,11 @@
 .avatar-large {
     width: 50px;
     height: 50px;
+}
 
+.avatar-seen {
+    width: 15px;
+    height: 15px;
 }
 
 .avatar-medium {
