--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,7 @@ $Chat-theme: mat.define-light-theme((
 @import "./app/shared/styles/variables.scss";
 @import "./app/shared/styles/input.scss";
 @import "./app/shared/styles/tooltip.scss";
+@import "./app/shared/styles/step.scss";
 
 
 html, body { 
