--- a/src/app/shared/styles/button.scss
+++ b/src/app/shared/styles/button.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 .btn {
     border-radius: 23px;
     padding: 4px 30px;
@@ -9,7 +11,7 @@
 }
 
 .btn-primary {
-    background-color: var(--color-primary);
+    background-color: $color-primary;
     border: none;
     letter-spacing: 0px;
 }
